# velm

./: .gitignore  MANIFEST.in  README.md  forge_and_install.symphony  pyproject.toml  requirements.txt  scaffold.spec
rust/: Cargo.toml  README.md
rust/src/: lib.rs
src/scaffold/: __init__.py  __main__.py  constants.py  gnostic_instrumentarium.py  herald.py  main.py
src/scaffold/archetypes/genesis/: chrome-extension.scaffold  cli-tool.scaffold  docs-mkdocs.scaffold  fastapi-service.scaffold  fullstack-monorepo.scaffold  generic-container.scaffold  gnostic-library.scaffold  gnostic-symphony.scaffold  go-cli.scaffold
src/scaffold/artisans/: TODO.txt  beautify.py  conform.py  excise.py  freeze_artisan.py  harvest.py  holograph_artisan.py  pad.py  replay.py  self_test.py  shell.py  studio.py  time_branch.py  time_machine.py  transfigure.py  transmute.py  tray_guardian.py  verify.py
src/scaffold/banners/: fallback.py
src/scaffold/communion/: oracle.py  renderers.py
src/scaffold/containerization/: __init__.py
src/scaffold/contracts/: architectural_contracts.py  communion_contracts.py  heresy_contracts.py  law_contracts.py
src/scaffold/core/: __init__.py  scaffold.scaffold  symbolic.scaffold
src/scaffold/core/ai/: __init__.py  (+1 more)
src/scaffold/creator/: cpu.py  factory.py  next_step_oracle.py  security.py
src/scaffold/default_templates/: template.alembic.ini.scaffold  template.code_of_conduct.scaffold  template.cpp.scaffold  template.cs.scaffold  template.docker-compose.scaffold  template.editorconfig.scaffold  template.env.example.scaffold  template.github-action-python.scaffold  template.gitignore.scaffold  template.go.scaffold  template.html.scaffold  template.java.scaffold  template.js.scaffold  template.kt.scaffold  template.makefile.scaffold  template.nginx.conf.scaffold  template.package.scaffold  template.php.scaffold  template.pre-commit-config.scaffold  template.py.scaffold  template.pytest.ini.scaffold  template.readme.scaffold  template.rs.scaffold  template.ruby.scaffold  template.scaffold.scaffold  template.security.scaffold  template.settings.json.scaffold  template.tsx.scaffold
src/scaffold/forge/: __init__.py  conductor.py  corpus_harvester.py  instruction_forger.py
src/scaffold/gnosis/: __init__.py  canon.py
src/scaffold/inquisitor/: core.py
src/scaffold/interfaces/: __init__.py  base.py
src/scaffold/jurisprudence_core/: architectural_grimoire.py  gnostic_type_system.py  schema_adjudicator.py
src/scaffold/parser_core/: hierophant.py  manifest_parser.py
src/scaffold/prophecy/: grimoires.py  oracle.py
src/scaffold/rendering/: json_renderer.py  svg_renderer.py  theme.py  tree_renderer.py
src/scaffold/runtime_manager/: __Init__.py  manager.py
src/scaffold/semantic_injection/: __init__.py
src/scaffold/settings/: manager.py  schema.py  tui.py
src/scaffold/shell/: app.py  interpreter.py
src/scaffold/studio/: app.py  contracts.py  emissary.py  logger.py  state.py  studio.scaffold
src/scaffold/symphony/: swarm.py
src/scaffold/themes/: cyberpunk.css  monokai.css
src/scaffold/utils/: converters.py  core_utils.py  ephemeral_server.py  invocation.py  resolve_gnostic_content.py
src/velm/: __build__.py  __build_info__.py  __init__.py  __main__.py  grammar.py  help_registry.py  language_server_handler.py  logger.py  main.py  setup_entry.py
src/velm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/velm/artisans/: adopt.py  arch.py  beautify.py  blame.py  blueprint_add.py  blueprint_remove.py  dream.py  env_tools.py  help.py  manifest.py  pad.py  refactor.py  repl_artisan.py  runtimes.py  save_artisan.py  settings.py  signature_artisan.py  summarize.py  symphony.py  templates.py  transfigure.py  translocate.py  transmute.py  tree.py  with_secrets.py
src/velm/banners/: __init__.py  sigil.py
src/velm/codex/: __init__.py  contract.py
src/velm/communion/: __init__.py
src/velm/containerization/: engine.py
src/velm/contracts/: communion_contracts.py  data_contracts.py  heresy_contracts.py  persona_contracts.py  symphony_contracts.py
src/velm/core/: __init__.py  __main__.py  artisan.py  chaos_engine.py  sentinel_conduit.py
src/velm/creator/: __init__.py  alu.py  bootloader.py  cpu.py  io_validators.py  opcodes.py  registers.py  reports.py  security.py
src/velm/default_templates/: template.changelog.scaffold  template.contributing.scaffold  template.css.scaffold  template.dart.scaffold  template.dockerfile.scaffold  template.dockerignore.scaffold  template.gitattributes.scaffold  template.html.scaffold  template.js.scaffold  template.json.scaffold  template.justfile.scaffold  template.license.scaffold  template.lua.scaffold  template.pyproject.scaffold  template.readme.scaffold  template.sbt.scaffold  template.scala.scaffold  template.sh.scaffold  template.swift.scaffold  template.ts.scaffold  template.zig.scaffold
src/velm/genesis/: canon_dna.py  genesis_grimoires.py  genesis_profiles.py
src/velm/gnosis/: README.md  canon.py  redemption.py  substrate.py  wisdom.py
src/velm/inquisitor/: TODO.md  __init__.py  config.py  config_shim.py  core.py  python_inquisitor.py
src/velm/interfaces/: base.py  requests.py
src/velm/jurisprudence_core/: adjudicator_of_souls.py  foreign_adjudicators.py  genesis_jurisprudence.py  gnostic_type_system.py  jurisprudence.py  scaffold_grammar_codex.py  symphony_grammar_codex.py
src/velm/parser_core/: __init__.py  block_consumer.py  hierophant.py
src/velm/prophecy/: __Init__.py  __init__.py  oracle.py
src/velm/rendering/: POSSIBILITIES.txt  __init__.py  base_renderer.py  lfg_scribe.py
src/velm/runtime_manager/: codex.py  manager.py
src/velm/semantic_injection/: contract.py  injector.py  loader.py
src/velm/shell/: __init__.py  contracts.py  shell.css
src/velm/studio/: __init__.py  app.css  gnostic_events.py  main.py  messages.py
src/velm/symphony/: __init__.py  build.symphony  docs_generator.symphony  release.symphony  swarm.py
src/velm/utils/: __init__.py  alchemy.py  archetype_utils.py  core_utils.py  gnosis_discovery.py  workspace_utils.py
(+2457 files in other folders)
