# =============================================================================
# == THE GNOSTIC MANIFEST (V-Ω-ETERNAL-CONFIGURATION)                        ==
# =============================================================================
# This scripture defines the build system, dependencies, and metadata for the
# Scaffold God-Engine and its Apeiron Alias.

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# =============================================================================
# == SECTION I: THE SOVEREIGN IDENTITY (METADATA)                            ==
# =============================================================================

[project]
name = "velm"
dynamic = ["version"]
description = "VELM: The Sovereign God-Engine for Architecture-as-Code (AaC). Built on the Scaffold Methodology."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" } 
authors = [
    { name = "Novalym Systems", email = "architect@novalym.com" }
]
keywords = [
    "velm", "scaffold", "architecture-as-code", "aac", "god-engine", 
    "automation", "devops", "gnostic", "ai-codegen", "llm-context"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended_Audience :: Architects",
    "Intended_Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]


# --- THE FOUNDATIONAL PILLARS (CORE DEPENDENCIES) ---
dependencies = [
    "pydantic>=2.5.0",          # The Vessel of Truth (Data Validation)
    "rich>=13.7.0",             # The Luminous Scribe (Terminal UI)
    "click>=8.1.0",             # The Command Parser (Legacy/Base)
    "jinja2>=3.1.2",            # The Alchemical Engine (Templating)
    "requests>=2.31.0",         # The Celestial Bridge (HTTP)
    "pathspec>=0.12.0",         # The Ignore Sentinel (.gitignore parsing)
    "typing-extensions>=4.9.0", # The Type Healer
    "pyyaml>=6.0.1",            # The Structured Tongue
]

[project.urls]
"Doctrine" = "https://novalym.dev/velm"
"The Forge" = "https://novalym.dev"
"Repository" = "https://github.com/novalym/velm"
# =============================================================================
# == THE DUAL ENTRY (THE ALIAS)                                              ==
# =============================================================================
[project.scripts]
velm = "scaffold.main:main"      # The new primary rite (replacing 'scaffold')
arch = "scaffold.main:main"      # The Architect's alias (remains)
scaffold = "scaffold.main:main" # The legacy connection (remains for compatibility)

# =============================================================================
# == THE FACULTIES OF ASCENSION (OPTIONAL DEPENDENCIES)                      ==
# =============================================================================
[project.optional-dependencies]

# --- THE VISUAL CORTEX (TUI & STUDIO) ---
studio = [
    "textual>=0.52.0",          # The Gnostic Cockpit (TUI Framework)
    "watchdog>=4.0.0",          # The Eternal Sentinel (File Watching)
    "pyperclip>=1.8.2",         # The Clipboard Conduit
]

# --- THE NEURAL CORTEX (AI & LLM) ---
ai = [
    "openai>=1.12.0",           # The OpenAI Bridge
    "anthropic>=0.18.0",        # The Anthropic Bridge
    "google-generativeai>=0.4.0", # The Gemini Bridge
    "tiktoken>=0.6.0",          # The Token Economist
]

# --- THE CELESTIAL REALM (CLOUD & REMOTE) ---
cloud = [
    "boto3>=1.34.0",            # The AWS S3 Sanctum
    "paramiko>=3.4.0",          # The SSH Celestial Bridge
]

# --- THE POLYGLOT INQUISITOR (PARSING & ANALYSIS) ---
parser = [
    "tree-sitter>=0.20.0",      # The Gnostic AST Eye
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "tree-sitter-go>=0.20.0",
    "tree-sitter-rust>=0.20.0",
    "toml>=0.10.2",             # The TOML Tongue
]

# --- THE SECURITY WARD (CRYPTOGRAPHY) ---
security = [
    "cryptography>=42.0.0",     # The Cipher (if needed for advanced auth)
    "python-jose[cryptography]>=3.3.0", # JWT Handling
]

# --- THE TITAN FORGE (BINARY BUILDING) ---
build = [
    "pyinstaller>=6.4.0",       # The Iron Mason
    # "pyoxidizer>=0.24.0",     # (Optional) The Titan Press - usually installed via cargo
]

# --- THE DEVELOPER'S TOOLKIT ---
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",              # The Swift Linter
    "mypy>=1.8.0",              # The Strict Typist
    "types-requests",
    "types-PyYAML",
    "types-paramiko",
    "types-setuptools"
]

# --- THE OMNIPOTENT INSTALL (ALL FACULTIES) ---
full = [
    "velm-cli[studio,ai,cloud,parser,security,build]" # <--- REFERENCE UPDATED
]

# =============================================================================
# == THE TOOL CONFIGURATION (EMBEDDED GNOSIS)                                ==
# =============================================================================

# --- RUFF (The Linter) ---
[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".venv",
    "scaffold/default_templates", # Do not lint raw templates
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90", "B", "UP"]
ignore = ["E501"] # Allow long lines (we use soft wrapping in TUI)

# --- PYTEST (The Inquisitor) ---
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
markers = [
    "unit: Pure logic tests",
    "integration: Tests involving filesystem or IO",
    "slow: Tests that take time (e.g., AI calls)",
    "ai: Tests requiring neural connectivity"
]

# --- MYPY (The Type Guardian) ---
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true # For some dynamic libs
check_untyped_defs = true

# --- SETUPTOOLS (The Build Backend) ---
[tool.setuptools]
package-dir = {"" = "src"}
packages = ["scaffold"]

# [ASCENSION 13]: THE EXCLUSION SIEVE
# This prevents setuptools from finding and including non-code artifacts
[tool.setuptools.exclude-package-data]
"*" = [
    ".env",
    ".env.local",
    "*.jsonl",
    ".scaffold/*",
    "__pycache__",
    "*.pyc"
]


[tool.setuptools.dynamic]
version = { attr = "scaffold.__version__" }

[tool.setuptools.package-data]
scaffold = [
    "default_templates/**/*",
    "archetypes/**/*",
    "themes/*.css",
    "*.json"
]