# =============================================================================
# == THE GNOSTIC MANIFEST (V-Ω-ETERNAL-CONFIGURATION)                        ==
# =============================================================================
# This scripture defines the build system, dependencies, and metadata for the
# Velm God-Engine and its Apeiron Alias (VELM).
#
# ASCENSION LOG:
# [01] Tree-Sitter Constellation Expanded (20+ Languages)
# [02] Build System Hardened (Setuptools/Wheel strictness)
# [03] Classifier Matrix Completed
# [04] Linter Sovereignty (Ruff Config V2)
# [05] Type Guardian Activated (Mypy Strict)
# [06] Test Inquisitor Armed (Pytest + Coverage)
# [07] Entry Points Unified (Velm/Scaffold)
# [08] Dependency Strata Clearly Defined
# [09] AI/Gnosis Layer Optimization
# [10] Package Data Exclusion Sieve
# [11] Developer Toolchain Integrated
# [12] Version Dynamics via Attribute
# =============================================================================

[build-system]
requires = ["setuptools>=70.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

# =============================================================================
# == SECTION I: THE SOVEREIGN IDENTITY (METADATA)                            ==
# =============================================================================

[project]
name = "velm"
dynamic = ["version"]
description = "VELM: The Sovereign God-Engine for Architecture-as-Code (AaC). Built on the Scaffold Methodology."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "Novalym Systems", email = "architect@novalym.com" }
]
keywords = [
    "velm", "scaffold", "architecture-as-code", "aac", "god-engine",
    "automation", "devops", "gnostic", "ai-codegen", "llm-context",
    "tree-sitter", "ast", "synthesis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed",
]

# --- THE FOUNDATIONAL PILLARS (CORE DEPENDENCIES) ---
dependencies = [
    "pydantic>=2.12.0",         # The Vessel of Truth (Data Validation)
    "pydantic-settings>=2.0.0", # The Environmental Sensor
    "rich>=13.7.0",             # The Luminous Scribe (Terminal UI)
    "click>=8.1.0",             # The Command Parser (Legacy/Base)
    "typer>=0.9.0",             # The Modern Command Interface
    "jinja2>=3.1.2",            # The Alchemical Engine (Templating)
    "requests>=2.31.0",         # The Celestial Bridge (HTTP)
    "httpx>=0.27.0",            # The Async Celestial Bridge
    "pathspec>=0.12.0",         # The Ignore Sentinel (.gitignore parsing)
    "typing-extensions>=4.9.0", # The Type Healer
    "pyyaml>=6.0.1",            # The Structured Tongue
    "tomli>=2.0.0; python_version < '3.11'", # The Config Reader
    "colorama>=0.4.6",          # The Chromatic Enabler
    "platformdirs>=4.0.0",      # The PathFinder
]

[project.urls]
"Doctrine" = "https://novalym.dev/velm"
"The Forge" = "https://novalym.dev"
"Repository" = "https://github.com/novalym/velm"
"Tracker" = "https://github.com/novalym/velm/issues"

# =============================================================================
# == THE DUAL ENTRY (THE ALIAS)                                              ==
# =============================================================================
[project.scripts]
velm = "velm.main:main"             # The new primary rite
scaffold = "velm.main:main"         # The legacy invocation (compatibility)
gnosis = "velm.tools.gnosis:main"   # The standalone AST inspector

# =============================================================================
# == THE FACULTIES OF ASCENSION (OPTIONAL DEPENDENCIES)                      ==
# =============================================================================
[project.optional-dependencies]

# --- THE VISUAL CORTEX (TUI & STUDIO) ---
studio = [
    "textual>=0.52.0",          # The Gnostic Cockpit (TUI Framework)
    "textual-dev>=1.5.0",       # The TUI Debugger
    "watchdog>=4.0.0",          # The Eternal Sentinel (File Watching)
    "pyperclip>=1.8.2",         # The Clipboard Conduit
    "rich-toolkit>=0.1.0",      # The Enhanced UI Components
]

# --- THE NEURAL CORTEX (AI & LLM) ---
ai = [
    "openai>=1.12.0",           # The OpenAI Bridge
    "anthropic>=0.18.0",        # The Anthropic Bridge
    "google-generativeai>=0.4.0", # The Gemini Bridge
    "tiktoken>=0.6.0",          # The Token Economist
    "chromadb>=0.4.22",         # The Vector Librarian (Memory)
    "sentence-transformers>=2.3.0", # The Semantic Embedding Engine
]

# --- THE CELESTIAL REALM (CLOUD & REMOTE) ---
cloud = [
    "boto3>=1.34.0",            # The AWS S3 Sanctum
    "paramiko>=3.4.0",          # The SSH Celestial Bridge
    "azure-storage-blob>=12.0.0", # The Azure Vault
    "google-cloud-storage>=2.0.0", # The GCP Vault
]

# --- THE POLYGLOT INQUISITOR (EXTENSIVE TREE-SITTER CONSTELLATION) ---
parser = [
    "tree-sitter>=0.22.0",              # The Gnostic AST Eye (Core)
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-cpp>=0.21.0",
    "tree-sitter-c>=0.21.0",
    "tree-sitter-c-sharp>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "tree-sitter-kotlin>=0.21.0",
    "tree-sitter-ruby>=0.21.0",
    "tree-sitter-php>=0.21.0",
    "tree-sitter-bash>=0.21.0",
    "tree-sitter-json>=0.21.0",
    "tree-sitter-yaml>=0.21.0",
    "tree-sitter-toml>=0.21.0",
    "tree-sitter-xml>=0.21.0",
    "tree-sitter-html>=0.21.0",
    "tree-sitter-css>=0.21.0",
    "tree-sitter-sql>=0.21.0",
    "tree-sitter-regex>=0.21.0",
    "tree-sitter-markdown>=0.21.0",
    "tree-sitter-dockerfile>=0.21.0",
    "tree-sitter-lua>=0.21.0",
]

# --- THE SECURITY WARD (CRYPTOGRAPHY) ---
security = [
    "cryptography>=42.0.0",     # The Cipher (if needed for advanced auth)
    "python-jose[cryptography]>=3.3.0", # JWT Handling
    "bcrypt>=4.1.0",            # The Password Hasher
]

# --- THE TITAN FORGE (BINARY BUILDING) ---
build = [
    "pyinstaller>=6.4.0",       # The Iron Mason
    "build>=1.0.0",             # The Standard Builder
    "twine>=4.0.0",             # The Publisher
]

# --- THE DEVELOPER'S TOOLKIT (TEST & LINT) ---
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-watch>=4.2.0",
    "ruff>=0.3.0",              # The Swift Linter
    "mypy>=1.8.0",              # The Strict Typist
    "pre-commit>=3.6.0",        # The Gatekeeper Hook
    "types-requests",
    "types-PyYAML",
    "types-paramiko",
    "types-setuptools",
    "types-pygments"
]

# --- THE OMNIPOTENT INSTALL (ALL FACULTIES) ---
full = [
    "velm[studio,ai,cloud,parser,security,build]"
]

# =============================================================================
# == THE TOOL CONFIGURATION (EMBEDDED GNOSIS)                                ==
# =============================================================================

# --- RUFF (The Linter) ---
# The Code must be beautiful, or it is heresy.
[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".venv",
    "velm/default_templates", # Do not lint raw templates
    "velm/archetypes",        # Do not lint archetype data
]

[tool.ruff.lint]
# E/W: Pycodestyle, F: Pyflakes, I: Isort, B: Bugbear, UP: Pyupgrade, C90: McCabe
select = ["E", "F", "I", "W", "C90", "B", "UP", "T20", "Q"]
ignore = ["E501"] # Allow long lines (we use soft wrapping in TUI)

[tool.ruff.lint.isort]
known-first-party = ["velm", "scaffold"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# --- PYTEST (The Inquisitor) ---
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=velm --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning"
]
markers = [
    "unit: Pure logic tests",
    "integration: Tests involving filesystem or IO",
    "slow: Tests that take time (e.g., AI calls)",
    "ai: Tests requiring neural connectivity",
    "ui: Tests involving the TUI"
]

# --- MYPY (The Type Guardian) ---
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true  # Enforce types everywhere in the core
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
exclude = ["tests/", "velm/default_templates/"]

[[tool.mypy.overrides]]
module = ["tree_sitter.*", "textual.*", "docker.*"]
ignore_missing_imports = true

# --- SETUPTOOLS (The Build Backend) ---
[tool.setuptools]
package-dir = {"" = "src"}
packages = ["velm"]

# [ASCENSION 13]: THE EXCLUSION SIEVE
# This prevents setuptools from finding and including non-code artifacts
[tool.setuptools.exclude-package-data]
"*" = [
    ".env",
    ".env.local",
    "*.jsonl",
    ".scaffold/*",
    "__pycache__",
    "*.pyc",
    "*.egg-info"
]

[tool.setuptools.dynamic]
version = { attr = "velm.__version__" }

[tool.setuptools.package-data]
velm = [
    "default_templates/**/*",
    "archetypes/**/*",
    "themes/*.css",
    "*.json",
    "*.yaml",
    "py.typed"
]