[package]
name = "scaffold_core_rs"
version = "0.1.0"
edition = "2021"

# [ASCENSION]: Dual-Artifact Definition
# This allows 'maturin' or 'cargo' to build the Shim and the Extension in one rite.

[lib]
name = "scaffold_core_rs"
crate-type = ["cdylib"]

[[bin]]
name = "scaffold" # This will become scaffold.exe
path = "src/bin/scaffold.rs"

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module", "abi3-py39"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ignore = "0.4"
walkdir = "2.3"
sha2 = "0.10"
hex = "0.4"
memmap2 = "0.9"
encoding_rs = "0.8"
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-go = "0.20"
tree-sitter-rust = "0.20"